argoIngress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: Host(`mydomain.com`) && PathPrefix(`/argocd/`)
      priority: 10
      services:
        - name: my-argo-cd-argocd-server 
          port: 80
