deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
  labels:
    app: service2
    component: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
      component: api
      version: v1
  template:
    metadata:
      labels:
        app: service2
        component: api
        version: v1
    spec:
      containers:
        - name: service2
          imagePullPolicy: Always
          image: dev22acr.azurecr.io/api:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dev22acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: service2-api
spec:
  type: ClusterIP
  selector:
    app: service2
    component: api
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service2-api-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`20.22.117.120`)
      kind: Rule
      services:
        - name: service2-api
          port: 8000
