deployment-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service2-website
    argocd.argoproj.io/instance: reddit
    component: website
  name: website-deployment-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2-website
      component: website
      version: v1
  template:
    metadata:
      labels:
        app: service2-website
        component: website
        version: v1
    spec:
      containers:
        - image: 'dev22acr.azurecr.io/website:latest'
          imagePullPolicy: Always
          name: service2-website
          ports:
            - containerPort: 5173
      imagePullSecrets:
        - name: dev22acr-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    argocd.argoproj.io/instance: reddit
  name: service2-website
spec:
  ports:
    - port: 5173
      targetPort: 5173
  selector:
    app: service2-website
    component: website
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    argocd.argoproj.io/instance: reddit
  name: service2-website-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`20.10.108.94`)
      services: service2-website
          port: 5173
