grafanaIngress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: prometheus-grafana
spec:
  entryPoints:
    - traefik
  routes:
    - match: Host(`ip`) && PathPrefix (`/grafana/`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
